--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://unpkg.com/onsenui/js/onsenui.min.js"></script>
 </head>
 
-<body>
+<body style="overflow-y: auto">
     <!--
     <ons-button onclick="ons.notification.alert('Hello World!')">Click Me</ons-button>  -->
 
