--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img v-bind:src="imgSRC" style="width: 60%; display: block; margin: auto; margin-top: 10px;" />
 
         <p>{{price}}</p>
-        <a v-bind:href="''">
+        <a v-bind:href="mkmURL">
             {{ mkmURL }}
         </a>
 
