--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="app-5" style="text-align: center;">
 
         <input v-model="message">
-        <ons-button v-on:click="getPrice">Get Price</ons-button>
+        <ons-button v-on:click="getCardInfo">Seach Card</ons-button>
         <img v-bind:src="imgSRC" style="width: 60%; display: block; margin: auto; margin-top: 10px;" />
 
         <p>{{price}}</p>
