--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsen-css-components.min.css">
     <script src="https://unpkg.com/onsenui/js/onsenui.min.js"></script>
     <link rel="icon" href="mtgIcon.png">
-    <link rel ="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 </head>
 
 <body style="overflow-y: auto">
@@ -16,28 +18,32 @@
     <ons-button onclick="ons.notification.alert('Hello World!')">Click Me</ons-button>  -->
 
     <div id="app">
-        <img src="logo.png" width="200px"/>
+        <img src="logo.png" width="200px" />
     </div>
 
 
     <div id="cardSearch" style="text-align: center;">
 
-        <input id ="input" v-model="message" >
+        <input id="input" v-model="message">
         <ons-button id="ons-btn" v-on:click="getCardInfo">Seach Card</ons-button>
-        <img id="img" v-bind:src="imgSRC"/>
+        <img id="img" v-bind:src="imgSRC" />
 
         <p>{{price}}</p>
+        <p>{{price30Day}}</p>
+        <p>{{price15Day}}</p>
+        <p>{{price1Day}}</p>
+        <p>{{priceFrom}}</p>
         <a id="url" v-bind:href="mkmURL">
             {{ mkmURL }}
         </a>
 
     </div>
 
-   <!--
+    <!--
   <div id="components-demo">
     <button-counter></button-counter>
-  </div>--> 
-  
+  </div>-->
+
     </script>
 
     <script type="text/javascript" src="mtgApi.js"></script>
