--- a/counterLife.html
+++ b/counterLife.html
@@ -90,24 +90,24 @@
 <body>
     <div class="container">
         <div class="section" onmousedown="startHold(0, event)" onmouseup="stopHold()" onmouseleave="stopHold()">
-            <div class="half">-</div>
+            <div class="half"></div>
             <div id="counter0">0</div>
-            <div class="half">+</div>
+            <div class="half"></div>
         </div>
         <div class="section" onmousedown="startHold(1, event)" onmouseup="stopHold()" onmouseleave="stopHold()">
-            <div class="half">-</div>
+            <div class="half"></div>
             <div id="counter1">0</div>
-            <div class="half">+</div>
+            <div class="half"></div>
         </div>
         <div class="section" onmousedown="startHold(2, event)" onmouseup="stopHold()" onmouseleave="stopHold()">
-            <div class="half">-</div>
+            <div class="half"></div>
             <div id="counter2">0</div>
-            <div class="half">+</div>
+            <div class="half"></div>
         </div>
         <div class="section" onmousedown="startHold(3, event)" onmouseup="stopHold()" onmouseleave="stopHold()">
-            <div class="half">-</div>
+            <div class="half"></div>
             <div id="counter3">0</div>
-            <div class="half">+</div>
+            <div class="half"></div>
         </div>
         <button class="options-button" onclick="openOptions()">⚙️</button>
     </div>
